--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,12 +10,47 @@ authors = [
     {name = "Your Name", email = "your.email@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 dependencies = [
-    "fastapi>=0.104.1",
-    "langchain>=0.0.350",
+    # Core
+    "python-dotenv>=1.0.0",
+    "pydantic>=2.10.7",
+    "pydantic-settings>=2.0.0",
+    # PDF/Text Processing
+    "pymupdf>=1.23.0",
+    "pypdf>=3.15.0",
+    "nltk>=3.8.1",
+    # Vector DB + Embeddings
+    "chromadb>=0.4.0",
+    "sentence-transformers>=2.2.2",
+    "openai>=1.0.0",
+    # LangChain Ecosystem
+    "langchain>=0.2.0",
+    "langchain-core>=0.2.0",
+    "langchain-community>=0.2.0",
+    "langchain-openai>=0.3.35",
+    "langchain-huggingface>=0.0.3",
     "langgraph>=0.0.33",
-    "chromadb>=0.4.15",
+    # Workflow Orchestration
+    "inngest>=0.3.0",
+    # Knowledge Graph
+    "networkx>=3.0",
+    "pyvis>=0.3.1",
+    # Backend API
+    "fastapi>=0.110.0",
+    "uvicorn[standard]>=0.23.0",
+    # Frontend (UI Layer)
+    "streamlit>=1.30.0",
+    # Utils
+    "tqdm>=4.65.0",
+    "requests>=2.31.0",
+    # AWS S3 Integration
+    "boto3>=1.28.0",
+    "botocore>=1.31.0",
+    "langchain-openai>=0.3.35",
+    "redis>=7.0.0",
+    "pytest>=8.4.2",
+    "python-multipart>=0.0.20",
 ]
 
 [project.optional-dependencies]
@@ -27,6 +62,19 @@ dev = [
     "mypy>=1.0.0",
 ]
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = "-v --tb=short"
+
+[tool.isort]
+profile = "black"
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+
 [tool.black]
 line-length = 88
-target-version = ['py38']
+target-version = ['py39']
