--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -10,27 +10,24 @@ on:
 jobs:
   test-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./backend
-    
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13'
-      
-      - name: Install uv
-        run: pip install uv==0.7.12
+          python-version: '3.11'
 
       - name: Install Dependencies
-        run: uv sync --frozen
+        run: |
+          pip install uv==0.7.12
+          uv sync --frozen
 
-      - name: Run tests
-        run: uv run pytest tests/ -v
+      - name: Run Tests
+        run: |
+          uv run pytest tests/ -v
 
       - name: Deploy to Render
         if: success()
