--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -24,6 +24,7 @@ jobs:
         run: |
           pip install uv==0.7.12
           uv sync --frozen
+        working-directory: backend
 
       - name: Run Tests
         run: |
